--- a/ru/articles/2025/05/1748443482905_6716/named.conf.local.master
+++ b/ru/articles/2025/05/1748443482905_6716/named.conf.local.master
@@ -1,2 +1,2 @@
-zone "example.org" { type master; file "/etc/bind/db.example.org"; allow-transfer { 192.168.1.3; }; };
-zone "1.168.192.in-addr.arpa" { type master; file "/etc/bind/db.192.168.1"; allow-transfer { 192.168.1.3; }; };
+zone "example.org" { type master; file "/etc/bind/zone.example.org"; allow-transfer { 192.168.1.3; }; };
+zone "1.168.192.in-addr.arpa" { type master; file "/etc/bind/zone.example.org.rev"; allow-transfer { 192.168.1.3; }; };
